// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SessionContent component snapshots > empty state — completed + 0 sections 1`] = `
"<div data-v-b8c49044="" class="terminal-chrome">
  <!-- Sticky overlay header: OUTSIDE the scroll container to avoid affecting scrollHeight -->
  <!--v-if-->
  <!-- State 4: Completed + no content -->
  <div class="fallback-banner fallback-banner--info" data-v-b8c49044=""><svg class="fallback-banner__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-v-b8c49044="">
      <circle cx="12" cy="12" r="10" data-v-b8c49044=""></circle>
      <line x1="12" y1="16" x2="12" y2="12" data-v-b8c49044=""></line>
      <line x1="12" y1="8" x2="12.01" y2="8" data-v-b8c49044=""></line>
    </svg>
    <div class="fallback-banner__body" data-v-b8c49044="">
      <div class="fallback-banner__title" data-v-b8c49044="">No sections detected</div>
      <div class="fallback-banner__text" data-v-b8c49044=""> Session completed successfully, but no section boundaries or terminal content were found. </div>
    </div>
  </div>
  <div class="terminal-empty-state" data-v-b8c49044=""><svg class="terminal-empty-state__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" data-v-b8c49044="">
      <polyline points="4 17 10 11 4 5" data-v-b8c49044=""></polyline>
      <line x1="12" y1="19" x2="20" y2="19" data-v-b8c49044=""></line>
    </svg>
    <div class="terminal-empty-state__label" data-v-b8c49044="">No terminal output available</div>
  </div>
</div>"
`;

exports[`SessionContent component snapshots > empty state — processing in progress 1`] = `
"<div data-v-b8c49044="" class="terminal-chrome">
  <!-- Sticky overlay header: OUTSIDE the scroll container to avoid affecting scrollHeight -->
  <!--v-if-->
  <!-- Non-terminal status: session is still being processed -->
  <div data-v-b8c49044="" class="terminal-empty"> Session is being processed… </div>
</div>"
`;

exports[`SessionContent component snapshots > error state — failed + 0 sections 1`] = `
"<div data-v-b8c49044="" class="terminal-chrome">
  <!-- Sticky overlay header: OUTSIDE the scroll container to avoid affecting scrollHeight -->
  <!--v-if-->
  <!-- State 1: Processing failed + no content -->
  <div data-v-b8c49044="" class="fallback-banner fallback-banner--error"><svg data-v-b8c49044="" class="fallback-banner__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
      <polygon data-v-b8c49044="" points="7.86 2 16.14 2 22 7.86 22 16.14 16.14 22 7.86 22 2 16.14 2 7.86 7.86 2"></polygon>
      <line data-v-b8c49044="" x1="12" y1="8" x2="12" y2="12"></line>
      <line data-v-b8c49044="" x1="12" y1="16" x2="12.01" y2="16"></line>
    </svg>
    <div data-v-b8c49044="" class="fallback-banner__body">
      <div data-v-b8c49044="" class="fallback-banner__title">Session processing failed</div>
      <div data-v-b8c49044="" class="fallback-banner__text"> The pipeline encountered an error while analyzing this recording. No terminal content could be recovered. </div>
      <!--v-if-->
    </div>
  </div>
  <div class="terminal-empty-state terminal-empty-state--error" data-v-b8c49044=""><svg class="terminal-empty-state__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" data-v-b8c49044="">
      <polyline points="4 17 10 11 4 5" data-v-b8c49044=""></polyline>
      <line x1="12" y1="19" x2="20" y2="19" data-v-b8c49044=""></line>
    </svg>
    <div class="terminal-empty-state__label" data-v-b8c49044="">No terminal output available</div>
  </div>
</div>"
`;

exports[`SessionContent component snapshots > failed status with sections — shows error banner 1`] = `
"<div data-v-b8c49044="" class="terminal-chrome">
  <!-- Sticky overlay header: OUTSIDE the scroll container to avoid affecting scrollHeight -->
  <!--v-if-->
  <div data-v-5d73d589="" data-v-b8c49044="" class="overlay-scrollbar terminal-scroll">
    <div data-v-5d73d589="" class="overlay-scrollbar__viewport">
      <!-- Error banner for failed sessions that have partial sections -->
      <div data-v-b8c49044="" class="fallback-banner fallback-banner--error"><svg data-v-b8c49044="" class="fallback-banner__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
          <polygon data-v-b8c49044="" points="7.86 2 16.14 2 22 7.86 22 16.14 16.14 22 7.86 22 2 16.14 2 7.86 7.86 2"></polygon>
          <line data-v-b8c49044="" x1="12" y1="8" x2="12" y2="12"></line>
          <line data-v-b8c49044="" x1="12" y1="16" x2="12.01" y2="16"></line>
        </svg>
        <div data-v-b8c49044="" class="fallback-banner__body">
          <div data-v-b8c49044="" class="fallback-banner__title">Session processing failed</div>
          <div data-v-b8c49044="" class="fallback-banner__text"> The pipeline encountered an error. Showing recovered terminal content below. </div>
        </div>
      </div><!-- Virtual mode: absolutely positioned items within a sized container -->
      <!-- Flat mode: render all sections directly -->
      <div data-v-f4ff43c4="" data-v-b8c49044="" class="section-item"><button data-v-a902c83d="" data-v-f4ff43c4="" class="section-header section-header--marker">
          <div data-v-a902c83d="" class="section-header__chevron"><span data-v-a902c83d="" class="icon icon--sm icon-chevron-down"></span></div><span data-v-a902c83d="" class="section-header__label">Partial</span><span data-v-a902c83d="" class="section-header__range">L1–L10 (3&nbsp;lines)</span><span data-v-a902c83d="" class="badge badge--sm section-header__badge badge--secondary">Marker</span>
        </button>
        <div data-v-f4ff43c4="" class="section-content">
          <div data-v-f4ff43c4="" class="section-empty"> No content captured </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`SessionContent component snapshots > flat mode — two sections render terminal-chrome + overlay scrollbar 1`] = `
"<div data-v-b8c49044="" class="terminal-chrome">
  <!-- Sticky overlay header: OUTSIDE the scroll container to avoid affecting scrollHeight -->
  <!--v-if-->
  <div data-v-5d73d589="" data-v-b8c49044="" class="overlay-scrollbar terminal-scroll">
    <div data-v-5d73d589="" class="overlay-scrollbar__viewport">
      <!-- Error banner for failed sessions that have partial sections -->
      <!--v-if-->
      <!-- Virtual mode: absolutely positioned items within a sized container -->
      <!-- Flat mode: render all sections directly -->
      <div data-v-f4ff43c4="" data-v-b8c49044="" class="section-item"><button data-v-a902c83d="" data-v-f4ff43c4="" class="section-header section-header--marker">
          <div data-v-a902c83d="" class="section-header__chevron"><span data-v-a902c83d="" class="icon icon--sm icon-chevron-down"></span></div><span data-v-a902c83d="" class="section-header__label">First</span><span data-v-a902c83d="" class="section-header__range">L1–L10 (5&nbsp;lines)</span><span data-v-a902c83d="" class="badge badge--sm section-header__badge badge--secondary">Marker</span>
        </button>
        <div data-v-f4ff43c4="" class="section-content">
          <div data-v-f4ff43c4="" class="section-empty"> No content captured </div>
        </div>
      </div>
      <div data-v-f4ff43c4="" data-v-b8c49044="" class="section-item"><button data-v-a902c83d="" data-v-f4ff43c4="" class="section-header section-header--marker">
          <div data-v-a902c83d="" class="section-header__chevron"><span data-v-a902c83d="" class="icon icon--sm icon-chevron-down"></span></div><span data-v-a902c83d="" class="section-header__label">Second</span><span data-v-a902c83d="" class="section-header__range">L1–L10 (5&nbsp;lines)</span><span data-v-a902c83d="" class="badge badge--sm section-header__badge badge--secondary">Marker</span>
        </button>
        <div data-v-f4ff43c4="" class="section-content">
          <div data-v-f4ff43c4="" class="section-empty"> No content captured </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`SessionContent component snapshots > virtual mode — renders virtual container with total height 1`] = `
"<div data-v-b8c49044="" class="terminal-chrome">
  <!-- Sticky overlay header: OUTSIDE the scroll container to avoid affecting scrollHeight -->
  <!--v-if-->
  <div data-v-5d73d589="" data-v-b8c49044="" class="overlay-scrollbar terminal-scroll">
    <div data-v-5d73d589="" class="overlay-scrollbar__viewport">
      <!-- Error banner for failed sessions that have partial sections -->
      <!--v-if-->
      <!-- Virtual mode: absolutely positioned items within a sized container -->
      <div data-v-b8c49044="" class="section-virtual-container" style="height: 200px; position: relative;">
        <div data-v-f4ff43c4="" data-v-b8c49044="" class="section-item section-item--virtual" data-index="0" style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"><button data-v-a902c83d="" data-v-f4ff43c4="" class="section-header section-header--marker">
            <div data-v-a902c83d="" class="section-header__chevron"><span data-v-a902c83d="" class="icon icon--sm icon-chevron-down"></span></div><span data-v-a902c83d="" class="section-header__label">First</span><span data-v-a902c83d="" class="section-header__range">L1–L10 (5&nbsp;lines)</span><span data-v-a902c83d="" class="badge badge--sm section-header__badge badge--secondary">Marker</span>
          </button>
          <div data-v-f4ff43c4="" class="section-content">
            <div data-v-f4ff43c4="" class="section-empty"> No content captured </div>
          </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;
